sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:7: error: illegal start of simple expression
    for(getNombreValeurs()-2 to 0 <-){
                                    ^AlgBubbleSort2:15: error: ')' expected but '}' found.
  }
  ^