sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var nbTri=3
  var nbTriTotal=0
  while(nbTri!=0){
    nbTri = 0
    for(getNombreValeurs()-2 to 0 <-){
      for(j <- 0 to i){
      	if(!plusPetit(j,j+1)){
        	nbTri += 1
        	echange(j,j+1)
      	}
      }
    }
  }
}